<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:orientation="vertical" >

    <include layout="@layout/view_main_bar" />

    <ImageView
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_25"
        app:srcCompat="@drawable/bg_default" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/shortgray"
        android:textSize="@dimen/sp_15" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/shortgray"
        android:textSize="@dimen/sp_15" />
    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/shortgray"
        android:textSize="@dimen/sp_15" />
    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:drawableLeft="@drawable/ic_nickname"
        android:drawablePadding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:hint="@string/nickname"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/shortgray"
        android:textSize="@dimen/sp_15" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/shortgray"
        android:textSize="@dimen/sp_15" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@android:color/holo_blue_light"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/sp_15" />
</LinearLayout>