<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:background="@drawable/bg_my"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_my_header"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_75"
            app:srcCompat="@drawable/bg_default" />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_blog"
            android:layout_width="@dimen/dp_80"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_15"
                app:srcCompat="@drawable/ic_main_blog" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/blog"
                android:textAlignment="center"
                android:textSize="@dimen/sp_12"  />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gainsboro" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gainsboro" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/white">
        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_30"
            app:srcCompat="@drawable/iv_my_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.500" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_toRightOf="@id/iv_settings"
            android:text="@string/settings"
            android:textColor="#A3A3A3"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_right_arrow"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.500" />
        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            app:srcCompat="@drawable/iv_my_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.500" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gainsboro" />
</LinearLayout>